tests/analyzer/invalid/0006_complex_duplicate_params.tj
def complex(a: int, b: int, a: int, c: int, b: int) -> int {
    return a + b + c
}
